fixed comment-form not visible (ticket 280): added z-index 1001

--- a/presentations.css
+++ b/presentations.css
@@ -68,6 +68,7 @@
     "content"
     "write";
     grid-template-columns:100%;
+    z-index:1001;
   }
 
   #comments.show.dialogbox{
